# specify the package information
[metadata]
name = blogchain
version = 0.0.1
description = A personal blog
long_description = file: README.md
long_description_content_type = text/markdown
author = Derek Wayne
author_email = derekwayne4@gmail.com
url = https://github.com/derekwayne/blogchain
project_urls =
    Bug Tracker = https://github.com/derekwayne/blogchain/issues
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = flaskr
packages = find:
python_requires = >=3.7

[options.packages.find]
where = flaskr